Fixed the login/signin align issue

--- a/src/Authentication/signup/SignUp.css
+++ b/src/Authentication/signup/SignUp.css
@@ -37,7 +37,7 @@
         border: 2px solid var(--gold);
         height: 350px;
         width: 550px;
-        padding: 3rem 1rem 0 3rem;
+        padding: 3rem 1rem 0 2rem;
         margin: auto;
     }
     .signup {
